[project]
name = "chatbot-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiofiles",
]
```

**`.python-version`:**
```
3.12
```

So your full repo should now have these files committed to GitHub:
```
Chatbot_FrontEnd/
├── serve_chat.py       ← FastAPI version
├── chat.html
├── vercel.json
├── requirements.txt    ← NEW
├── pyproject.toml      ← NEW
└── .python-version     ← NEW
